--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="menu_add_package_save">Save</string>
     <string name="add_card_label">Add card</string>
     <string name="add_package_label">Add package</string>
+    <string name="menu_add_card_save">Save</string>
 </resources>
