--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="add_card_label">Add card</string>
     <string name="add_package_label">Add package</string>
     <string name="menu_add_card_save">Save</string>
+    <string name="card_background_desc">Background</string>
 </resources>
