--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="error_card_already_exists">A card with this name already exists. Please, try another one</string>
     <string name="error_package_already_exists">A package with this name already exists. Please, try another one</string>
     <string name="title_edit">Edit</string>
+    <string name="add_package_card_alpha_hint">Cards color</string>
 </resources>
