--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -59,8 +59,8 @@
     <string name="symbols_title">Символы</string>
     <string name="example_cards_package_title">Это набор</string>
     <string name="example_card_name">Это карточка</string>
-    <string name="example_card_front">"Передняя сторона\n(нажми на меня)"</string>
-    <string name="example_card_back">Задняя сторона</string>
+    <string name="example_card_front"><![CDATA[<h1 style=\"text-align: center; \" center;=\"\"><font face=\"Open Sans\" neue=\"\">Передняя сторона</font></h1><h4 style=\"text-align: center; \" center;=\"\"><font face=\"Open Sans\" neue=\"\" color=\"#6ba54a\">(нажми на меня)</font></h4><h4 style=\"text-align:\" center;=\"\"><font face=\"Open Sans\" neue=\"\" color=\"#6ba54a\"><br></font></h4><p style=\"text-align: center; \" center;=\"\"><font color=\"#e76363\" face=\"Open Sans=\"\"><span style=\"font-size: 36px;\" 36px;=\"\">&lt;3</span></font></p>]]></string>
+    <string name="example_card_back"><![CDATA[<h1 style=\"text-align: center; \" center;=\"\"><font neue=\"\" face=\"Merriweather\">Задняя сторона</font></h1><hr><p style=\"text-align: center; \" right;=\"\"><font neue=\"\" face=\"Merriweather\">Я старался :3</font></p><p style=\"text-align:\" center;=\"\" right;=\"\"><img src=\"file:///android_asset/img_cat.jpg\" style=\"float: none; width: 100%;\" 100%;=\"\"></p>]]></string>
     <string name="example_symbols_math_title">Математика</string>
     <string name="example_symbols_math_symbols">⇒→⇔∧∨¬∀∃|∅∈∉⊆⊂⊇⊃∪⋂ℕℤℚℝℂ≈≤≥√∞∑∏∫∂↦°αβγδεζηθικλμνξοπρσςτυφχψωΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ</string>
     <string name="example_symbols_chem_title">Химия</string>
@@ -69,4 +69,6 @@
     <string name="error_card_already_exists">Карточка с таким именем уже существует.</string>
     <string name="error_package_already_exists">Набор с таким именем уже существует.</string>
     <string name="title_edit">Редактирование</string>
+    <string name="add_package_card_alpha_hint">Цвет карточек</string>
+    <string name="image_pick_permissions">Для выбора изображений необходимо разрешение</string>
 </resources>
